# picachv

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  ae-readme.md  coq-gen.py  picachv_core.v
.cargo/: config.toml
.meta/: rebuttal.sec25.md  review.sec25.md
benchmark/: README.md  prepare_data.py  requirements.txt  settings.py  tpc-policies.md
benchmark/dbgen/: dbgen  qgen
benchmark/duckdb/: CMakeLists.txt  cxxopts.h  main.cc  queries.cc  queries.h
benchmark/micro/polars/: Cargo.toml
benchmark/micro/polars/src/: main.rs
benchmark/polars-tpc/: Cargo.toml
benchmark/polars-tpc/src/: main.rs  queries.rs
data/: simple_policy.json  simple_policy2.json
data/tables/: test.py
docker/: Dockerfile
docs/: AE-README.md  BUILD.md  TEEs.md  benchmark.md  core.md  installation.md  integration.md  policy_language.md  unsupported.md  workflow.md
examples/arrow-playground/: Cargo.toml
examples/arrow-playground/src/: main.rs
examples/cpp/: CMakeLists.txt  main.cc  picachv_interfaces.h
examples/polars-playground/: Cargo.toml
examples/polars-playground/src/: main.rs
examples/polars-policy/: Cargo.toml
examples/polars-policy/src/: main.rs
picachv/: Cargo.toml
picachv-api/: Cargo.toml
picachv-api/c_headers/: picachv_interfaces.h
picachv-api/src/: capi.rs  jvapi.rs  lib.rs  native.rs
picachv-core/: Cargo.toml
picachv-core/src/: arena.rs  callback.rs  cast.rs  constants.rs  dataframe.rs  effects.rs  expr.rs  io.rs  lib.rs  macros.rs  profiler.rs  thread_pool.rs  udf.rs
picachv-core/src/dataframe/: mod.rs
picachv-core/src/expr/: builder.rs  check.rs  mod.rs  pexpr.rs
picachv-core/src/io/: mod.rs  parquet.rs
picachv-core/src/plan/: builder.rs  mod.rs
picachv-core/src/policy/: context.rs  error.rs  lattice.rs  mod.rs  policy.rs  types.rs
picachv-error/: Cargo.toml
picachv-error/src/: lib.rs
picachv-message/: Cargo.toml  build.rs
picachv-message/proto/: affected_rows.proto  basic.proto  const.proto  expr_args.proto  lp_args.proto  plan_args.proto  transform.proto
picachv-message/src/: lib.rs  picachv_messages.rs  utils.rs
picachv-monitor/: Cargo.toml
picachv-monitor/src/: lib.rs
picachv-parse/: Cargo.toml  build.rs
picachv-parse/lang/: policy_definition_language.lalrpop  policy_definition_language.rs
picachv-parse/src/: lib.rs
picachv-proof/: arena.v  builder.v  cast.v  constants.v  context.v  dataframe.v  lattice.v  lib.v  mod.v  parquet.v  policy.v  profiler.v  thread_pool.v  types.v  udf.v
picachv/src/: lib.rs
tests/: Cargo.toml  polars_test.rs  polars_tpc_h_test.rs
tools/: README.md
tools/plotting/: breakdown.ipynb  macro.ipynb  micro.ipynb
tools/policy-generator/: Cargo.toml
tools/policy-generator/src/: main.rs
utils/: Cargo.toml
