[workspace]
resolver = "2"
members = [
  "picachv-api",
  "picachv-core",
  "picachv-error",
  "picachv-monitor",
  "picachv-message",
  "picachv",
  "examples/polars-policy",
  "picachv-parse",
  "examples/polars-playground",
  "examples/arrow-playground",
  "tests",
  "tools/policy-generator",
  "benchmark/polars-tpc",
  "benchmark/micro/polars",
]

exclude = ["examples/cpp", "benchmark"]

[workspace.dependencies]
picachv-api = { path = "picachv-api", default-features = false }
picachv-core = { path = "picachv-core", default-features = false }
picachv-error = { path = "picachv-error", default-features = false }
picachv-message = { path = "picachv-message", default-features = false }
picachv-monitor = { path = "picachv-monitor", default-features = false }

ahash = "0.8.11"
arrow-ipc = "51.0.0"
arrow-array = "51.0.0"
arrow-schema = { version = "51.0.0", features = ["serde"] }
arrow-select = "51.0.0"
bincode = "1.3.3"
bytemuck = "1.16.3"
chrono = "0.4.38"
num_enum = { version = "0.7.2" }
ordered-float = { version = "4.2.0", features = ["serde"] }
polars = { path = "../polars/crates/polars" }
parquet = "51.0.0"
prost = { version = "0.12" }
rayon = { version = "1.10.0" }
serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = "1.0.116"
spin = { version = "0.9.8", features = ["rwlock"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
