[package]
name = "picachv-api"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picachv-error = { workspace = true }
picachv-monitor = { workspace = true }
picachv-core = { workspace = true }
picachv-message = {workspace = true}

pyo3 = { version = "0.21.1", optional = true }
jni = { version = "0.21.1", optional = true }
uuid = { workspace = true }

[features]
default = ["java", "python"]
java = ["jni"]
python = ["pyo3"]
