[package]
name = "picachv-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
picachv-error = { workspace = true }
picachv-message = { workspace = true }

arrow-ipc = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
chrono = { workspace = true }
tabled = { version = "0.15.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = { workspace = true }
ordered-float = { workspace = true }
parquet = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
speedy = { workspace = true, optional = true }
uuid = { workspace = true }

typetag = "0.2.16"
parse_duration = "2.1.1"

[features]
default = ["arena_for_plan", "fast_bin", "use_parquet", "json"]
json = []
use_parquet = ["parquet", "fast_bin"]
fast_bin = ["speedy", "ordered-float/speedy"]
arena_for_plan = []
