[package]
name = "picachv-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
picachv-error = { workspace = true }
picachv-message = { workspace = true }

ahash = { workspace = true }
arrow-ipc = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
bincode = { workspace = true, optional = true }
bitmaps = { version = "3.2.1" }
chrono = { workspace = true }
jemallocator = { workspace = true }
tabled = { version = "0.15.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_enum = { workspace = true }
ordered-float = { workspace = true }
parquet = { workspace = true, optional = true }
rayon = { workspace = true }
spin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

typetag = "0.2.16"
parse_duration = "2.1.1"

[features]
default = ["arena_for_plan", "fast_bin", "use_parquet", "json"]
arena_for_plan = []
coq = []                                                        # Enable this feature if we need to translate code into Coq
fast_bin = ["bincode"]
json = []
use_parquet = ["parquet", "fast_bin"]
trace = []

[profile.release]
debug = true
