[package]
name = "picachv-message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picachv-error = { workspace = true }

prost = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
prost-build = { version = "0.12.4" }
