[package]
name = "picachv-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picachv-error = { workspace = true }
picachv-core = { workspace = true }
picachv-message = { workspace = true }

lazy_static = "1.4.0"
uuid = { workspace = true }
prost = { workspace = true }
