[package]
name = "picachv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picachv-api = { workspace = true }
picachv-core = { workspace = true }
picachv-error = { workspace = true }
picachv-monitor = { workspace = true }
picachv-message = { workspace = true }

[features]
default = []
python = ["picachv-api/python"]
java = ["picachv-api/java"]
fast_bin = ["picachv-core/fast_bin"]
