[package]
name = "polars-tpc"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
polars = { path = "../../../polars/crates/polars", default-features = false, features = [
  "performant",
  "fmt",
  "simd",
  "lazy",
  "ipc",
  "top_k",
  "streaming",
  "dtype-categorical",
  "dtype-struct",
  "parquet",
  "temporal",
  "dtype-date",
  "strings",
  "dtype-datetime",
  "semi_anti_join",
] }
