[package]
name = "polars-policy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
log = "0.4.21"
# Let us use the forked version; since the dependency of polars is not published, we
# use the local path to the polars crate.
polars = { path = "../../../polars/crates/polars", features = ["lazy"] }
